# GFEM

./: .gitignore  CMakeLists.txt  H1_elast.0.vtk  Imposed_elast.0.vtk  PennyShape.json  gmesh.vtk  residual.txt  rhsglobal.txt
.github/: copilot-instructions.md
2D/: CMakeLists.txt  ComputeSigmaZ_TEST_DOCUMENTATION.md  CrackDef.json  ElasticityConstitutive.nb  GFem2D.cpp  Model.cpp  QUICK_REFERENCE.md  SBFem2D.cpp  SquareFrac2.msh  TEST_IMPLEMENTATION_GUIDE.md  TPZElasticity2D_TEST_SUMMARY.md  TestGFemEnrichment.cpp  quadmesh.msh
3D/: CMakeLists.txt  GFem3D.cpp  PennyShape.msh
CGal/: buildcrack_cgal.h  config_cgal.h  testCrackMg2.C
Documentation/: Seminar 2-7-2024.pptx  SingularFunctions.nb
Meshes/: QuadSqrt.geo  quadmesh.geo
NeoPZ_extensions/: CMakeLists.txt  TPZFrac2d.cpp  TPZFrac2d.h  TPZGFemCompElH1.cpp  TPZGFemCompElH1.h  TPZGFemCompMesh.cpp  TPZGFemCompMesh.h  TPZGFemDarcyFlow.cpp  TPZGFemDarcyFlow.h  TPZGFemElasticity2D.cpp  TPZGFemElasticity2D.h  TPZGFemElasticity3D.cpp  TPZGFemElasticity3D.h  TPZGFemEnrichment.cpp  TPZGFemEnrichment.h  TPZGFemOrthogonal.cpp  TPZGFemOrthogonal.h  TPZSSpMatRedStructMatrix.cpp  TPZSSpMatRedStructMatrix.h  TPZSSparseMatRed.cpp  TPZSSparseMatRed.h  TestAutodiff.cpp
Obstruction_examples/: Fracture.py  FractureExampleHide.msh  MainObstruction.py  SquareFracture.py  TPZCrossObstruction.py  TPZMeshModeling.py  TPZModuleTypology.py  TPZMultipleObstruction.py  TPZNoObstruction.py  TPZRandomObstruction.py  TPZSemiArcObstruction.py  TPZSimpleObstruction.py
UnitTests/: CMakeLists.txt  TestAutodiff.cpp  test_TPZGFemEnrichment.cpp  test_main.cpp
cmake/: EnableCatch2.cmake  EnableEigen.cmake  FetchAutodiff.cmake  Findpybind11.cmake  add_unit_test.cmake
